--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
           npm install
           npm run build -- --base /${{ github.event.repository.name }}/
           cp .eodash/dist/index.html .eodash/dist/404.html
+          touch .eodash/dist/.nojekyll
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: ./.eodash/dist/
