--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "@eodash/eodash": "^5.0.0-alpha.1.15",
-    "@eox/map": "^1.3.0",
-    "@eox/stacinfo": "^0.3.0"
+    "@eodash/eodash": "5.0.0-alpha.2.23",
+    "@eox/map": "^1.15.0",
+    "@eox/stacinfo": "^0.4.0"
   },
   "author": "",
   "devDependencies": {
